@@ -13,6 +13,8 @@ version 0.46:
 	* Event handlers in perl passed arguments as elements of
 	  an array rather than all concatenated as a string, making
 	  perl much easier to use (thanks Dennis Lambe Jr.)
+	* Can pass an argument to timeout_handlers in perl
+	  (thanks Artem Litvinovich)
 
 version 0.45 (10/04/2001):
 	* New plugin event: event_chat_send_invite
